--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -15,7 +15,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 700;
     
     @include small-mobile-only {
@@ -23,14 +23,16 @@ h3 {
 }
 
 p {
+    font-size: 0.9rem;
     @include small-mobile-only {
-        font-size: 0.8rem;}
-    
+        font-size: 0.75rem;}
 }
 
-.menu__price {
+.menu__price{
+    font-size: 0.9rem;
+    font-weight: 700;
     @include small-mobile-only {
-        font-size: 0.8rem;}
+        font-size: 0.7rem;}
 }
 
 .logo {
