--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -79,6 +79,10 @@
   flex-direction: column;
   margin: $margin-elements;
 
+  @include small-mobile-only {
+    margin: 0.3rem;
+  }
+
   &__title-container {
     margin: 1rem 0rem 1rem 0rem;
   }
@@ -274,6 +278,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    @include small-mobile-only {
+    padding-left: 0.5rem;
+    }
   }
 
   &__details {
@@ -283,13 +291,17 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    @include small-mobile-only {
+      padding-left: 0.5rem;
+      }
   }
 
   &__price {
     display: inline-block;
     position: absolute;
     right: 2rem;
-    bottom: 1rem;
+    bottom: 1.1rem;
     width: 1rem;
     height: 1rem;
     transition: transform 500ms ease-in-out;
