--- a/main.css
+++ b/main.css
@@ -758,7 +758,7 @@ footer {
   height: auto;
   padding-bottom: 13rem;
   margin-bottom: 3.75rem;
-  background-color: rgb(252, 246, 246);
+  background-color: #f2f2f2;
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0 0;
   -moz-border-radius: 25px 25px 0 0;
@@ -789,13 +789,13 @@ footer {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
-  background-color: rgb(252, 246, 246);
+  background-color: #f2f2f2;
 }
 .main-container__heading .restaurant-like__after {
   position: absolute;
   top: 0.65rem;
   right: 0.5rem;
-  background-color: rgb(252, 246, 246);
+  background-color: #f2f2f2;
 }
 
 .menu {
