--- a/main.css
+++ b/main.css
@@ -749,6 +749,14 @@ footer {
   width: auto;
 }
 
+.heading-image {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+  min-height: 15rem;
+  position: absolute;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -769,13 +777,6 @@ footer {
   .main-container {
     top: 12rem;
   }
-}
-.main-container__img {
-  width: 100%;
-  height: auto;
-  object-fit: fill;
-  min-height: 15rem;
-  position: absolute;
 }
 .main-container__heading {
   line-height: 3rem;
