--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -20,6 +20,14 @@
 
 }
 
+.heading-image {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+  min-height: 15rem;
+  position: absolute;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -38,14 +46,6 @@
 
   @include small-mobile-only {
     top: 12rem;
-  }
-
-  &__img {
-    width: 100%;
-    height: auto;
-    object-fit: fill;
-    min-height: 15rem;
-    position: absolute;
   }
 
   &__heading {
