--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -6,6 +6,7 @@
     height: 2rem;
     font-size: 1.5rem;
     border: none;
+    color:black;
     background-color: white;
     border-radius: 50%;
     -webkit-border-radius: 50%;
