--- a/main.css
+++ b/main.css
@@ -712,7 +712,7 @@ footer {
 .restaurant__footer {
   width: auto;
   height: auto;
-  padding: 0.5rem;
+  padding: 0.5rem 0 0.5rem 0.8rem;
   border-radius: 0 0 20px 20px;
   -webkit-border-radius: 0 0 20px 20px;
   -moz-border-radius: 0 0 20px 20px;
@@ -726,7 +726,7 @@ footer {
   bottom: 1.1rem;
 }
 .restaurant-like__after {
-  position: fixed;
+  position: absolute;
   right: 2rem;
   bottom: 1rem;
 }
