--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -308,7 +308,7 @@
     &__footer {
         width: auto;
         height: auto;
-        padding: 0.5rem;
+        padding: 0.5rem 0 0.5rem 0.8rem;
         border-radius: 0 0 20px 20px;
         -webkit-border-radius: 0 0 20px 20px;
         -moz-border-radius: 0 0 20px 20px;
@@ -324,7 +324,7 @@
     bottom: 1.1rem;
 
     &__after {
-        position: fixed;
+        position: absolute;
         right: 2rem;
         bottom: 1rem;
     }
