--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -258,18 +258,18 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-right: 3.125rem;
+    padding-right: 3.4rem;
     border-radius: 0 10px 10px 0;
     -webkit-border-radius: 0 10px 10px 0;
     -moz-border-radius: 0 10px 10px 0;
     -ms-border-radius: 0 10px 10px 0;
     -o-border-radius: 0 10px 10px 0;
-    transition: padding-right 400ms;
-    -webkit-transition: padding-right 400ms;
-    -moz-transition: padding-right 400ms;
-    -ms-transition: padding-right 400ms;
-    -o-transition: padding-right 400ms;
-  }
+    transition: padding-right 500ms ease-in-out;
+    -webkit-transition: padding-right 500ms ease-in-out;
+    -moz-transition: padding-right 500ms ease-in-out;
+    -ms-transition: padding-right 500ms ease-in-out;
+    -o-transition: padding-right 500ms ease-in-out;
+}
 
   &__name {
     width: 100%;
