--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -315,18 +315,18 @@
         -ms-border-radius: 0 0 20px 20px;
         -o-border-radius: 0 0 20px 20px;
     }
-
 }
 
-.restaurant-like {
+.like--card-position {
     position: absolute;
     right: 2rem;
     bottom: 1.1rem;
 
-    &__after {
-        position: absolute;
-        right: 2rem;
-        bottom: 1rem;
-    }
+}
+
+.like-after--card-position {
+    position: absolute;
+    right: 2.03rem;
+    bottom: 1rem;
 
 }
