--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -57,14 +57,14 @@
     padding-right: 3rem;
   }
 
-  &__heading .restaurant-like {
+  &__heading .like--menu-position {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
     background-color: $background-container;
   }
 
-  &__heading .restaurant-like__after {
+  &__heading .like-after--menu-position {
     position: absolute;
     top: 0.65rem;
     right: 0.5rem;
