-adaptations dans loader.scss : ajout d'une animation sur les points de suspension et d'une graduation sur la couleur du texte; -modifications des class et structure de tous les fichiers html pour intégrer les adaptions du loader; -déplacement des blocs de propriétés de style des containers "main" depuis les fichiers home_page.scss et menu.scss vers le fichier container.scss avec ajout des adaptions sur le positionnement et les tailles des éléments pour la versions desktop ; -modifications dans typogrphy.scss du nommage du sélecteur "main-container" suite au changement de nom dans les fichiers html; -changement dans button_action.scss : précision de la largeur du bouton pour les versions tablette et desktop; -mise en forme du fichier nav.scss; -modification dans variables.scss : changement de "colour-quartery" pour obtenir une totale opacité sur le footer et l'assombrir; -changements plus spécifiques dans menu.scss : intégration des tailles et positions des conteneurs, de l'image et des menus pour la version desktop, modification du nom du sélecteur "main-container".

--- a/sass/components/_button_action.scss
+++ b/sass/components/_button_action.scss
@@ -29,7 +29,11 @@
     -o-transition: transform 300ms ease-in-out;
 
     @include tablette-only {
-        width: 30%;
+        width: 15rem;
+    }
+
+    @include desktop-only {
+        width: 18rem;
     }
 
     &:hover {
