--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,7 @@
 $colour-primary : #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
-$colour-quartery:rgba(65, 60, 60, 0.863);
+$colour-quartery:rgb(49, 49, 49);
 $colour-text :white;
 $shadow-size: 0.5rem 0.2rem;
 $shadow-blur-effect: 1rem;
