--- a/main.css
+++ b/main.css
@@ -102,12 +102,12 @@ p {
   }
 }
 
-.main-container__heading h1 {
+.menu-main-container__heading h1 {
   font-family: "Shrikhand", "Robot", sans-serif;
   font-size: 1.8rem;
 }
 @media all and (max-width: 350px) {
-  .main-container__heading h1 {
+  .menu-main-container__heading h1 {
     font-size: 1.3rem;
   }
 }
@@ -155,7 +155,12 @@ p {
 }
 @media all and (min-width: 767px) {
   .button-action {
-    width: 30%;
+    width: 15rem;
+  }
+}
+@media all and (min-width: 992px) {
+  .button-action {
+    width: 18rem;
   }
 }
 .button-action:hover {
@@ -267,9 +272,10 @@ p {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: center;
   align-items: center;
   position: fixed;
   top: 0;
@@ -278,13 +284,21 @@ p {
   -webkit-animation: opacity 3000ms 3000ms both;
 }
 .loader__heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   font-family: "Shrikhand", sans-serif;
-  font-size: 4rem;
+  width: 20rem;
+  height: 8rem;
+  font-size: 2.5rem;
   font-weight: 900;
-  margin: 1rem;
-  color: #9356DC;
-  animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
-  -webkit-animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  background: linear-gradient(to bottom, #FF79DA, #9356DC 95%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: loader 1500ms 100ms cubic-bezier(1, 0.8, 0.3, 5) 1;
+  -webkit-animation: loader 1500ms 1200ms cubic-bezier(2, 1.8, 3, 5) 1;
 }
 
 @keyframes loader {
@@ -327,6 +341,65 @@ p {
     z-index: -1;
   }
 }
+.loader-dots {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 20rem;
+  height: 20rem;
+  animation: opacity 3000ms 3000ms both;
+  -webkit-animation: opacity 3000ms 3000ms both;
+}
+
+.loader-dots div {
+  top: 2rem;
+  left: 2rem;
+  width: 1rem;
+  height: 1rem;
+  background: linear-gradient(to bottom, #FF79DA, #9356DC 95%);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.loader-dots div:nth-child(1) {
+  left: 2rem;
+  animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+}
+
+.loader-dots div:nth-child(2) {
+  left: 6rem;
+  animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+}
+
+.loader-dots div:nth-child(3) {
+  left: 10rem;
+  animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+}
+
+@keyframes pulsar {
+  0%, 20% {
+    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+  }
+  50%, 100% {
+    transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+  }
+}
 header {
   text-align: center;
   margin: 1rem 1rem 1rem 1rem;
@@ -338,10 +411,58 @@ header {
   }
 }
 
+.home-main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media all and (min-width: 767px) {
+  .home-main-container {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+}
+@media all and (min-width: 992px) {
+  .home-main-container {
+    flex-direction: column;
+  }
+}
+
+.menu-main-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 14rem;
+  width: 100%;
+  height: auto;
+  padding-bottom: 13rem;
+  margin-bottom: 3.75rem;
+  background-color: #f2f2f2;
+  border-radius: 25px 25px 0 0;
+  -webkit-border-radius: 25px 25px 0 0;
+  -moz-border-radius: 25px 25px 0 0;
+  -ms-border-radius: 25px 25px 0 0;
+  -o-border-radius: 25px 25px 0 0;
+}
+@media all and (max-width: 350px) {
+  .menu-main-container {
+    top: 10rem;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu-main-container {
+    width: 95%;
+    height: 50%;
+    align-items: center;
+    margin: auto;
+    top: 10rem;
+  }
+}
+
 footer {
   width: auto;
   height: auto;
-  background-color: rgba(65, 60, 60, 0.863);
+  background-color: rgb(49, 49, 49);
   padding: 1rem 0 1rem 0;
 }
 @media all and (min-width: 767px) {
@@ -403,23 +524,6 @@ footer {
 }
 .nav__link--color:hover {
   color: #FF79DA;
-}
-
-.home-main-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-@media all and (min-width: 767px) {
-  .home-main-container {
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
-}
-@media all and (min-width: 992px) {
-  .home-main-container {
-    flex-direction: column;
-  }
 }
 
 .presentation {
@@ -760,29 +864,14 @@ footer {
   min-height: 15rem;
   position: absolute;
 }
-
-.main-container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  top: 14rem;
-  width: 100%;
-  height: auto;
-  padding-bottom: 13rem;
-  margin-bottom: 3.75rem;
-  background-color: #f2f2f2;
-  border-radius: 25px 25px 0 0;
-  -webkit-border-radius: 25px 25px 0 0;
-  -moz-border-radius: 25px 25px 0 0;
-  -ms-border-radius: 25px 25px 0 0;
-  -o-border-radius: 25px 25px 0 0;
-}
-@media all and (max-width: 350px) {
-  .main-container {
-    top: 12rem;
+@media all and (min-width: 992px) {
+  .heading-image__restaurant-img {
+    width: 100%;
+    height: 60rem;
   }
 }
-.main-container__heading {
+
+.menu-main-container__heading {
   line-height: 3rem;
   width: auto;
   height: auto;
@@ -790,13 +879,13 @@ footer {
   margin: 1rem 1rem 1rem 1rem;
   padding-right: 3rem;
 }
-.main-container__heading .like--menu-position {
+.menu-main-container__heading .like--menu-position {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
   background-color: #f2f2f2;
 }
-.main-container__heading .like-after--menu-position {
+.menu-main-container__heading .like-after--menu-position {
   position: absolute;
   top: 0.65rem;
   right: 0.5rem;
@@ -815,8 +904,22 @@ footer {
     margin: 0.8rem;
   }
 }
+@media all and (min-width: 992px) {
+  .menu {
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
 .menu__title-container {
   margin: 1rem 0rem 1rem 0rem;
+}
+@media all and (min-width: 992px) {
+  .menu__title-container {
+    width: 5%;
+    margin: 2rem;
+  }
 }
 .menu__heading {
   padding-bottom: 0.5rem;
@@ -841,6 +944,12 @@ footer {
   background-color: white;
   cursor: pointer;
   overflow: hidden;
+}
+@media all and (min-width: 992px) {
+  .menu__selection {
+    width: 20%;
+    margin: 1rem;
+  }
 }
 .menu__selection--first-apparition {
   animation: first-apparition 1000ms 2900ms ease-in;
