--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,8 +10,6 @@ h1 {
 h2 {
     font-size: 1.5rem;
     font-weight: 700;
-
-
 }
 
 h3 {
@@ -44,7 +42,7 @@ p {
     }
 }
 
-.main-container__heading h1 {
+.menu-main-container__heading h1 {
     font-family: 'Shrikhand', 'Robot', sans-serif;
     font-size: 1.8rem;
 
