--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -2,9 +2,10 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
     align-items: center;
     position: fixed;
     top: 0;
@@ -13,14 +14,23 @@
     -webkit-animation: opacity 3000ms 3000ms both;
 
     &__heading {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
         font-family: 'Shrikhand', sans-serif;
-        font-size: 4rem;
+        width: 20rem;
+        height: 8rem;
+        font-size: 2.5rem;
         font-weight: 900;
-        margin: 1rem;
-        color: $colour-primary;
-        animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
-        -webkit-animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+        background: linear-gradient(to bottom, $colour-secondary, $colour-primary 95%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        animation: loader 1500ms 100ms cubic-bezier(1, 0.8, 0.3, 05) 1;
+        -webkit-animation: loader 1500ms 1200ms cubic-bezier(2, 1.8, 3, 5) 1;
     }
+
 }
 
 @keyframes loader {
@@ -67,4 +77,69 @@
         opacity: 0;
         z-index: -1;
     }
+}
+
+.loader-dots {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 20rem;
+    height: 20rem;
+    animation: opacity 3000ms 3000ms both;
+    -webkit-animation: opacity 3000ms 3000ms both;
+}
+
+.loader-dots div {
+    top: 2rem;
+    left: 2rem;
+    width: 1rem;
+    height: 1rem;
+    background: linear-gradient(to bottom, $colour-secondary, $colour-primary 95%);
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.loader-dots div:nth-child(1) {
+    left: 2rem;
+    animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+    -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+}
+
+.loader-dots div:nth-child(2) {
+    left: 6rem;
+    animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+    -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+}
+
+.loader-dots div:nth-child(3) {
+    left: 10rem;
+    animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+    -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+}
+
+@keyframes pulsar {
+
+    0%,
+    20% {
+        transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+        -moz-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+        -o-transform: scale(0.5);
+    }
+
+    50%,
+    100% {
+        transform: scale(0.8);
+        -webkit-transform: scale(0.8);
+        -moz-transform: scale(0.8);
+        -ms-transform: scale(0.8);
+        -o-transform: scale(0.8);
+    }
+
 }
