--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -26,27 +26,18 @@
   object-fit: fill;
   min-height: 15rem;
   position: absolute;
+
+  @include desktop-only {
+  &__restaurant-img{
+
+    width: 100%;
+    height: 60rem;
+  }
 }
 
-.main-container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  top: 14rem;
-  width: 100%;
-  height: auto;
-  padding-bottom: 13rem;
-  margin-bottom: 3.75rem;
-  background-color: $background-container;
-  border-radius: 25px 25px 0 0;
-  -webkit-border-radius: 25px 25px 0 0;
-  -moz-border-radius: 25px 25px 0 0;
-  -ms-border-radius: 25px 25px 0 0;
-  -o-border-radius: 25px 25px 0 0;
+}
 
-  @include small-mobile-only {
-    top: 12rem;
-  }
+.menu-main-container {
 
   &__heading {
     line-height: 3rem;
@@ -83,8 +74,20 @@
     margin: 0.8rem;
   }
 
+  @include desktop-only {
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
   &__title-container {
     margin: 1rem 0rem 1rem 0rem;
+
+    @include desktop-only {
+ width: 5%;
+ margin: 2rem
+  }
   }
 
   &__heading {
@@ -112,6 +115,12 @@
     background-color: white;
     cursor: pointer;
     overflow: hidden;
+
+    @include desktop-only {
+      width: 20%;
+      margin:1rem;
+   
+  }
   }
 
   &__selection--first-apparition {
