--- a/main.css
+++ b/main.css
@@ -260,10 +260,11 @@ p {
   width: 80%;
   height: auto;
   margin: 1rem 1rem 1rem 1rem;
+  padding: 0.5rem;
   font-size: 1rem;
+  text-align: center;
   background: #99E2D0;
   cursor: pointer;
-  height: 2rem;
   border-radius: 0.188rem 0.188rem 0.188rem 0.188rem;
   border: none;
 }
