--- a/sass/components/_btn_new.scss
+++ b/sass/components/_btn_new.scss
@@ -8,10 +8,11 @@
         width: 80%;
         height: auto;
         margin: $margin-elements;
+        padding:0.5rem;
         font-size: 1rem;
+        text-align: center;
         background: $colour-tertiary;
         cursor: pointer;
-        height: 2rem;
         border-radius: 0.188rem 0.188rem 0.188rem 0.188rem;
         border: none;   
     }
