--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -370,11 +370,11 @@
   top: 1.5rem;
   right: 1.5rem;
   font-size: 2rem;
-  transform: rotate (0);
-  -webkit-transform: rotate (0);
-  -moz-transform: rotate (0);
-  -ms-transform: rotate (0);
-  -o-transform: rotate (0);
+  transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transition: transform 500ms ease-in-out;
   -webkit-transition: transform 500ms ease-in-out;
   -moz-transition: transform 500ms ease-in-out;
