-changement dans index.html : modifications du bouton like avec suppression des div du bouton like_after initialement créé pour le remplacer par l'icone "herat" version solid de font awesome, -modifications dans button_like.scss : suppression du bouton intialement créé, ajout du style pour le bouton de l'icone nouvellement insérée avec utilisation de background-clip permettant de lui appliquer une couleur graduée; -changements dans home_page.scss : ajustement de la position des icones  "heart" pour les superposer.

--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -6,92 +6,41 @@
     height: 2rem;
     font-size: 1.5rem;
     border: none;
-    color:black;
+    color: black;
     background-color: white;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    cursor: grab;
-} 
-.like-after 
-{
-        border: none;
-        width: 2rem;
-        height: 2rem;
-        transform: scale(0);
-        -webkit-transform: scale(0);
-        -moz-transform: scale(0);
-        -ms-transform: scale(0);
-        -o-transform: scale(0);
-        transition: transform 400ms ease-in-out;
-        -webkit-transition: transform 400ms ease-in-out;
-        -moz-transition: transform 400ms ease-in-out;
-        -ms-transition: transform 400ms ease-in-out;
-        -o-transition: transform 400ms ease-in-out;
-
-    &__part-right {
-       width: 2rem;
-       height: 2rem;
-       position: absolute;
-       right: 1rem;
-       bottom: 1rem;
-       z-index: 3;
-       border-radius: 50% 0 0 50%;       
-       -webkit-border-radius: 50% 0 0 50%;
-       -moz-border-radius: 50% 0 0 50%;
-       -ms-border-radius: 50% 0 0 50%;
-       -o-border-radius: 50% 0 0 50%;
-       transform: rotate(45deg);
-       -webkit-transform: rotate(45deg);
-       -moz-transform: rotate(45deg);
-       -ms-transform: rotate(45deg);
-       -o-transform: rotate(45deg);
-       background: linear-gradient(to right bottom, rgb(147, 86, 220, 1), 70%, #FF79DA);
-
+    cursor: pointer;
 }
 
-    /*carré milieu*/
-    &__part-middle {
-        width: 2rem;
-        height: 2rem;
-        position: absolute;
-        z-index: 3;
-        transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        background: linear-gradient(to right bottom, rgba(147, 86, 220, 1), 40%, #FF79DA);
-    }
 
-    &__part-left {
-        width: 2rem;
-        height: 2rem;
-        position: absolute;
-        left: 1rem;
-        bottom: 1rem;
-        z-index: 2;
-        border-radius: 50% 50% 0 0;
-        -webkit-border-radius: 50% 50% 0 0;
-        -moz-border-radius: 50% 50% 0 0;
-        -ms-border-radius: 50% 50% 0 0;
-        -o-border-radius: 50% 50% 0 0;
-        transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        background: linear-gradient(to right bottom, rgb(147, 86, 220, 1), 70%, #FF79DA);
-}
-
+.like-after {
+    display: inline-block;
+    background-image: linear-gradient(to bottom, $colour-secondary, $colour-primary 60%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transition: transform 400ms ease-in-out;
+    -webkit-transition: transform 400ms ease-in-out;
+    -moz-transition: transform 400ms ease-in-out;
+    -ms-transition: transform 400ms ease-in-out;
+    -o-transition: transform 400ms ease-in-out;
 }
 
 .like:active+.like-after {
-    transform: scale(0.45);
-    -webkit-transform: scale(0.45);
-    -moz-transform: scale(0.45);
-    -ms-transform: scale(0.45);
-    -o-transform: scale(0.45);
+    transform: scale(1.52);
+    -webkit-transform: scale(1.52);
+    -moz-transform: scale(1.52);
+    -ms-transform: scale(1.52);
+    -o-transform: scale(1.52);
 }
