--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -188,13 +187,17 @@ p {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  cursor: grab;
+  cursor: pointer;
 }
 
 .like-after {
-  border: none;
-  width: 2rem;
-  height: 2rem;
+  display: inline-block;
+  background-image: linear-gradient(to bottom, #FF79DA, #9356DC 60%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
   transform: scale(0);
   -webkit-transform: scale(0);
   -moz-transform: scale(0);
@@ -205,65 +208,14 @@ p {
   -moz-transition: transform 400ms ease-in-out;
   -ms-transition: transform 400ms ease-in-out;
   -o-transition: transform 400ms ease-in-out;
-  /*carré milieu*/
-}
-.like-after__part-right {
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  right: 1rem;
-  bottom: 1rem;
-  z-index: 3;
-  border-radius: 50% 0 0 50%;
-  -webkit-border-radius: 50% 0 0 50%;
-  -moz-border-radius: 50% 0 0 50%;
-  -ms-border-radius: 50% 0 0 50%;
-  -o-border-radius: 50% 0 0 50%;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  background: linear-gradient(to right bottom, rgb(147, 86, 220), 70%, #FF79DA);
-}
-.like-after__part-middle {
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  z-index: 3;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  background: linear-gradient(to right bottom, rgb(147, 86, 220), 40%, #FF79DA);
-}
-.like-after__part-left {
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  left: 1rem;
-  bottom: 1rem;
-  z-index: 2;
-  border-radius: 50% 50% 0 0;
-  -webkit-border-radius: 50% 50% 0 0;
-  -moz-border-radius: 50% 50% 0 0;
-  -ms-border-radius: 50% 50% 0 0;
-  -o-border-radius: 50% 50% 0 0;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  background: linear-gradient(to right bottom, rgb(147, 86, 220), 70%, #FF79DA);
 }
 
 .like:active + .like-after {
-  transform: scale(0.45);
-  -webkit-transform: scale(0.45);
-  -moz-transform: scale(0.45);
-  -ms-transform: scale(0.45);
-  -o-transform: scale(0.45);
+  transform: scale(1.52);
+  -webkit-transform: scale(1.52);
+  -moz-transform: scale(1.52);
+  -ms-transform: scale(1.52);
+  -o-transform: scale(1.52);
 }
 
 .btn {
@@ -846,13 +798,13 @@ footer {
 .like--card-position {
   position: absolute;
   right: 2rem;
-  bottom: 1.1rem;
+  bottom: 1rem;
 }
 
 .like-after--card-position {
   position: absolute;
-  right: 2.03rem;
-  bottom: 1rem;
+  right: 2.53rem;
+  bottom: 1.232rem;
 }
 
 .header-menu {
