--- a/main.css
+++ b/main.css
@@ -173,12 +173,12 @@ p {
 }
 
 .like {
+  display: inline-block;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2rem;
-  height: 2rem;
-  font-size: 1.5rem;
+  width: 1.6rem;
+  height: 1.6rem;
   border: none;
   color: black;
   background-color: white;
@@ -189,9 +189,29 @@ p {
   -o-border-radius: 50%;
   cursor: pointer;
 }
-
-.like-after {
+.like:active > .like__after {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+.like__before {
   display: inline-block;
+  position: absolute;
+  width: 1.6rem;
+  height: 1.6rem;
+  font-size: 1.6rem;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.like__after {
+  display: inline-block;
+  font-size: 1.6rem;
+  position: absolute;
   background-image: linear-gradient(to bottom, #FF79DA, #9356DC 60%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -208,14 +228,6 @@ p {
   -moz-transition: transform 400ms ease-in-out;
   -ms-transition: transform 400ms ease-in-out;
   -o-transition: transform 400ms ease-in-out;
-}
-
-.like:active + .like-after {
-  transform: scale(1.52);
-  -webkit-transform: scale(1.52);
-  -moz-transform: scale(1.52);
-  -ms-transform: scale(1.52);
-  -o-transform: scale(1.52);
 }
 
 .btn {
@@ -799,12 +811,6 @@ footer {
   position: absolute;
   right: 2rem;
   bottom: 1rem;
-}
-
-.like-after--card-position {
-  position: absolute;
-  right: 2.53rem;
-  bottom: 1.232rem;
 }
 
 .header-menu {
