--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -1,10 +1,10 @@
 .like {
+    display: inline-block;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 2rem;
-    height: 2rem;
-    font-size: 1.5rem;
+    width: 1.6rem;
+    height: 1.6rem;
     border: none;
     color: black;
     background-color: white;
@@ -14,33 +14,47 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     cursor: pointer;
+
+    &:active> .like__after{
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+    
+    &__before {
+        display: inline-block;
+        position: absolute;
+        width: 1.6rem;
+        height: 1.6rem;
+        font-size: 1.6rem;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
+
+    &__after {
+        display: inline-block;
+        font-size: 1.6rem;
+        position: absolute;
+        background-image: linear-gradient(to bottom, $colour-secondary, $colour-primary 60%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-background-clip: text;
+        -moz-text-fill-color: transparent;
+        transform: scale(0);
+        -webkit-transform: scale(0);
+        -moz-transform: scale(0);
+        -ms-transform: scale(0);
+        -o-transform: scale(0);
+        transition: transform 400ms ease-in-out;
+        -webkit-transition: transform 400ms ease-in-out;
+        -moz-transition: transform 400ms ease-in-out;
+        -ms-transition: transform 400ms ease-in-out;
+        -o-transition: transform 400ms ease-in-out;
 }
-
-
-.like-after {
-    display: inline-block;
-    background-image: linear-gradient(to bottom, $colour-secondary, $colour-primary 60%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-background-clip: text;
-    -moz-text-fill-color: transparent;
-    transform: scale(0);
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transition: transform 400ms ease-in-out;
-    -webkit-transition: transform 400ms ease-in-out;
-    -moz-transition: transform 400ms ease-in-out;
-    -ms-transition: transform 400ms ease-in-out;
-    -o-transition: transform 400ms ease-in-out;
-}
-
-.like:active+.like-after {
-    transform: scale(1.52);
-    -webkit-transform: scale(1.52);
-    -moz-transform: scale(1.52);
-    -ms-transform: scale(1.52);
-    -o-transform: scale(1.52);
 }
