--- a/main.css
+++ b/main.css
@@ -181,7 +181,7 @@ p {
   height: 1.6rem;
   border: none;
   color: black;
-  background-color: white;
+  background-color: transparent;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -190,11 +190,11 @@ p {
   cursor: pointer;
 }
 .like:active > .like__after {
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
+  transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  -o-transform: scale(1.15);
 }
 .like__before {
   display: inline-block;
@@ -212,6 +212,7 @@ p {
   display: inline-block;
   font-size: 1.6rem;
   position: absolute;
+  top: 0.03rem;
   background-image: linear-gradient(to bottom, #FF79DA, #9356DC 60%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -856,14 +857,8 @@ footer {
 }
 .menu-main-container__heading .like--menu-position {
   position: absolute;
-  top: 0.5rem;
-  right: 0rem;
-  background-color: #f2f2f2;
-}
-.menu-main-container__heading .like-after--menu-position {
-  position: absolute;
-  top: 0.65rem;
-  right: 0.1rem;
+  top: 0.7rem;
+  right: 1rem;
   background-color: #f2f2f2;
 }
 
