--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -7,7 +7,7 @@
     height: 1.6rem;
     border: none;
     color: black;
-    background-color: white;
+    background-color:transparent;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -16,12 +16,12 @@
     cursor: pointer;
 
     &:active> .like__after{
-        transform: scale(1);
-        -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-        -ms-transform: scale(1);
-        -o-transform: scale(1);
-    }
+        transform: scale(1.15);
+        -webkit-transform: scale(1.15);
+        -moz-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+        -o-transform: scale(1.15);
+}
     
     &__before {
         display: inline-block;
@@ -40,6 +40,7 @@
         display: inline-block;
         font-size: 1.6rem;
         position: absolute;
+        top: 0.03rem;
         background-image: linear-gradient(to bottom, $colour-secondary, $colour-primary 60%);
         background-clip: text;
         -webkit-background-clip: text;
