--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
 h2 {
@@ -15,22 +15,27 @@ h2 {
 h3 {
     font-size: 1.1rem;
     font-weight: 700;
-    
+
     @include small-mobile-only {
-        font-size: 0.9rem;}
+        font-size: 0.9rem;
+    }
 }
 
 p {
     font-size: 1rem;
+
     @include small-mobile-only {
-        font-size: 0.8rem;}
+        font-size: 0.8rem;
+    }
 }
 
-.menu__price{
+.menu__price {
     font-size: 1rem;
     font-weight: 700;
+
     @include small-mobile-only {
-        font-size: 0.8rem;}
+        font-size: 0.8rem;
+    }
 }
 
 .logo {
@@ -42,7 +47,7 @@ p {
     }
 }
 
-.menu-main-container__heading h1 {
+.menu-main-container h1 {
     font-family: 'Shrikhand', 'Robot', sans-serif;
     font-size: 1.8rem;
 
@@ -56,8 +61,9 @@ p {
     font-weight: 300;
 }
 
-footer{
+footer {
 
     @include small-mobile-only {
-        font-size: 0.8rem;}
+        font-size: 0.8rem;
+    }
 }
