--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,9 @@
 header {
     text-align: center;
-    margin:$margin-elements;
-    padding:1rem;
+    margin-top: 1rem;
+    padding: 1rem;
 
     @include tablette-only {
         text-align: start;
     }
-
 }
