--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -20,20 +20,42 @@
 
 }
 
-.heading-image {
-  width: 100%;
+.heading-image-first-dimension {
+  width: 110%;
   height: auto;
-  object-fit: fill;
   min-height: 15rem;
   position: absolute;
+  overflow: hidden;
+
+  &__restaurant-img {
+    position: absolute;
+    right: 1rem;
+    width: 100%;
+    height: 114%;
+    object-fit: cover;
+  }
+}
+
+.heading-image-second-dimension {
+  width: 100%;
+  height: auto;
+  min-height: 15rem;
+  position: absolute;
+  overflow: hidden;
+
+  &__restaurant-img {
+    position: absolute;
+    width: 100%;
+    height: 110%;
+    object-fit: cover;
+  }
 
   @include desktop-only {
     &__restaurant-img {
       width: 100%;
-      height: 60rem;
+      height: 100%;
     }
   }
-
 }
 
 .menu-main-container {
@@ -44,7 +66,11 @@
     height: auto;
     position: relative;
     margin: $margin-elements;
-    padding-right: 4rem;
+    padding-right: 3rem;
+
+    @include desktop-only {
+      padding-right: 6rem;
+    }
   }
 
   &__heading .like--menu-position {
@@ -74,7 +100,6 @@
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
-
   }
 
   &__title-container {
@@ -84,7 +109,6 @@
       position: absolute;
       bottom: 5.5rem;
       left: 4rem;
-
       width: 5%;
       margin: 2rem
     }
@@ -96,7 +120,6 @@
 
   &__heading--larger {
     @include desktop-only {
-
       position: absolute;
       bottom: 6rem;
     }
@@ -111,15 +134,15 @@
     display: flex;
     flex-direction: row;
     width: auto;
-    height: 5rem;
+    height: 4.5rem;
     padding: 0;
     margin-bottom: 1rem;
     @include initial-shadow-element;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
     background-color: white;
     cursor: pointer;
     overflow: hidden;
@@ -257,8 +280,24 @@
     -o-transform: translate(-5rem);
   }
 
+  @include desktop-only {
+    &__selection:hover &__price {
+      transform: translate(-5rem);
+      -webkit-transform: translate(-5rem);
+      -moz-transform: translate(-5rem);
+      -ms-transform: translate(-5rem);
+      -o-transform: translate(-5rem);
+    }
+  }
+
   &__selection:active &__container-selection {
     padding-right: 8rem;
+  }
+
+  @include desktop-only {
+    &__selection:hover &__container-selection {
+      padding-right: 8rem;
+    }
   }
 
   &__selection:active &__check {
@@ -267,6 +306,16 @@
     -moz-transform: scaleX(1);
     -ms-transform: scaleX(1);
     -o-transform: scaleX(1);
+  }
+
+  @include desktop-only {
+    &__selection:hover &__check {
+      transform: scaleX(1);
+      -webkit-transform: scaleX(1);
+      -moz-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+      -o-transform: scaleX(1);
+    }
   }
 
   &__container-selection {
@@ -360,7 +409,7 @@
   display: flex;
   align-items: center;
   position: absolute;
-  top: 1.5rem;
+  top: 1.25rem;
   right: 1.5rem;
   font-size: 2rem;
   transform: rotate(0deg);
@@ -382,6 +431,17 @@
   -moz-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
   -o-transform: rotate(360deg);
+
+}
+
+@include desktop-only {
+  .menu__selection:hover .fa-circle-check {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+  }
 }
 
 .button-container {
