--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -11,7 +11,6 @@
     @include desktop-only {
         flex-direction: column;
     }
-
 }
 
 .menu-main-container {
@@ -36,9 +35,10 @@
 
     @include desktop-only {
         width: 95%;
-        height: 50%;
+        height: auto;
         align-items: center;
         margin: auto;
-        top: 10rem;
+        top: 6rem;
+        opacity:0.95
     }
 }
