--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,9 @@
 header {
+    width: auto;
+    height: auto;
     text-align: center;
-    margin-top: 1rem;
-    padding: 1rem;
+    padding: 2rem 1rem 1rem 1rem;
+    background-color: white;
 
     @include tablette-only {
         text-align: start;
