--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,6 +1,4 @@
 .header-menu {
-  width: auto;
-  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,10 +16,15 @@
     width: auto;
   }
 
+  @include desktop-only {
+    &__return {
+      left: 3rem;
+    }
+  }
 }
 
 .heading-image-first-dimension {
-  width: 110%;
+  width: 100%;
   height: auto;
   min-height: 15rem;
   position: absolute;
@@ -29,7 +32,6 @@
 
   &__restaurant-img {
     position: absolute;
-    right: 1rem;
     width: 100%;
     height: 114%;
     object-fit: cover;
@@ -49,13 +51,41 @@
     height: 110%;
     object-fit: cover;
   }
+}
 
-  @include desktop-only {
-    &__restaurant-img {
-      width: 100%;
-      height: 100%;
-    }
+@include desktop-only {
+
+  .heading-image-first-dimension,
+  .heading-image-first-dimension__restaurant-img,
+  .heading-image-second-dimension,
+  .heading-image-second-dimension__restaurant-img {
+    display: none;
   }
+
+  .french-style--bg-page {
+    background-image: url("assets/img/A_la_Française.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .delite-senses--bg-page {
+    background-image: url("assets/img/A_la_Française.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .enchanted-note--bg-page {
+    background-image: url("assets/img/La_note_enchantée.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .palette-of-taste--bg-page {
+    background-image: url("assets/img/La_palette_du_goût.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
 }
 
 .menu-main-container {
@@ -368,7 +398,7 @@
     display: inline-block;
     position: absolute;
     right: 2rem;
-    bottom: 1.1rem;
+    bottom: 0.9rem;
     width: 1rem;
     height: 1rem;
     transition: transform 500ms ease-in-out;
